Script - Spacy matching rule - Identify electrical installation - NO completed. #15

--- a/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify electrical installation - NO/Identify electrical installation.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify electrical installation - NO/Identify electrical installation.ipynb
@@ -158,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">(4) \n<mark class=\"entity\" style=\"background: aquamarine; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    Fartøy\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">WATER_VESSEL</span>\n</mark>\n med største lengde \n<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    mindre enn\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">LENGTH_PREFIX</span>\n</mark>\n \n<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    10,67 meter\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">LENGTH</span>\n</mark>\n bygget etter 1. januar 1992 kan alternativt være utstyrt med brannslokningsanlegg i samsvar med retningslinjer fastsatt i kapittel Y14 i Nordisk Båt Standard (1990).</div></span>"
+      "text/html": "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">(1) \n<mark class=\"entity\" style=\"background: aquamarine; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    Fartøy\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">WATER_VESSEL</span>\n</mark>\n med største lengde 6 til 15 meter bygget etter 1. januar 1992 med \n<mark class=\"entity\" style=\"background: darksalmon; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    elektriske anlegg\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">ELECTRICAL_INSTALLATION</span>\n</mark>\n med spenning \n<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    inntil\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">VOLTAGE_PREFIX</span>\n</mark>\n \n<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    50,6 V\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">VOLTAGE</span>\n</mark>\n skal oppfylle kravene i Nordisk Båt Standard (1990) Y11 om \n<mark class=\"entity\" style=\"background: darksalmon; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    elektriske anlegg\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">ELECTRICAL_INSTALLATION</span>\n</mark>\n. (2) \n<mark class=\"entity\" style=\"background: aquamarine; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    Fartøy\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">WATER_VESSEL</span>\n</mark>\n med største lengde 6 til 15 meter bygget før 1. januar 1992 med \n<mark class=\"entity\" style=\"background: darksalmon; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    elektriske anlegg\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">ELECTRICAL_INSTALLATION</span>\n</mark>\n med spenning \n<mark class=\"entity\" style=\"background: orange; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    inntil\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">VOLTAGE_PREFIX</span>\n</mark>\n \n<mark class=\"entity\" style=\"background: yellow; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n    50 V\n    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; text-transform: uppercase; vertical-align: middle; margin-left: 0.5rem\">VOLTAGE</span>\n</mark>\n skal være i henhold til regelverket som gjaldt ved byggetidspunktet.</div></span>"
      },
      "metadata": {}
     }
@@ -180,8 +180,7 @@
     "# Does not have a POS tagger.\n",
     "nlp = Norwegian()\n",
     "\n",
-    "#text = \"(1) Fartøy med største lengde mellom 10,67 og 15 meter skal ha brannslokningsanlegg.\"\n",
-    "text = \"(4) Fartøy med største lengde mindre enn 10,67 meter bygget etter 1. januar 1992 kan alternativt være utstyrt med brannslokningsanlegg i samsvar med retningslinjer fastsatt i kapittel Y14 i Nordisk Båt Standard (1990).\"\n",
+    "text = \"(1) Fartøy med største lengde 6 til 15 meter bygget etter 1. januar 1992 med elektriske anlegg med spenning inntil 50,6 V skal oppfylle kravene i Nordisk Båt Standard (1990) Y11 om elektriske anlegg. (2) Fartøy med største lengde 6 til 15 meter bygget før 1. januar 1992 med elektriske anlegg med spenning inntil 50 V skal være i henhold til regelverket som gjaldt ved byggetidspunktet.\"\n",
     "\n",
     "doc = nlp(text)\n",
     "\n",
@@ -191,31 +190,25 @@
     "# START - spaCy patterns\n",
     "#\n",
     "\n",
-    "# LENGTH\n",
-    "\n",
-    "length_pattern = [\n",
-    "    {\"TEXT\": {\"REGEX\": \"[0-9]+[,]+[0-9]|[0-9]\"}},\n",
-    "    {\"LOWER\": {\"IN\": [\"meter\"]}}]\n",
-    "\n",
-    "matcher.add(\"LENGTH\", None, length_pattern)\n",
-    "\n",
-    "# LENGTH_PREFIX\n",
-    "\n",
-    "length_prefix_pattern_1 = [\n",
-    "    {\"LOWER\": {\"IN\": [\"mindre\"]}},\n",
-    "    {\"LOWER\": {\"IN\": [\"enn\"]}}]\n",
-    "\n",
-    "length_prefix_pattern_2 = [\n",
-    "    {\"LOWER\": {\"IN\": [\"under\"]}}]\n",
-    "\n",
-    "matcher.add(\"LENGTH_PREFIX\", None, length_prefix_pattern_1, length_prefix_pattern_2)\n",
-    "\n",
     "# WATER_VESSEL\n",
-    "\n",
-    "water_vessel_pattern = [\n",
-    "    {\"LOWER\": {\"IN\": [\"fartøy\"]}}]\n",
-    "\n",
+    "water_vessel_pattern = [{\"LOWER\": {\"IN\": [\"fartøy\"]}}]\n",
     "matcher.add(\"WATER_VESSEL\", None, water_vessel_pattern)\n",
+    "\n",
+    "# ELECTRICAL_INSTALLATION\n",
+    "electrical_installation_pattern_1 = [{\"LOWER\": {\"IN\": [\"elektrisk\"]}},{\"LOWER\": {\"IN\": [\"anlegg\"]}}]\n",
+    "electrical_installation_pattern_2 = [{\"LOWER\": {\"IN\": [\"elektriske\"]}},{\"LOWER\": {\"IN\": [\"anlegg\"]}}]\n",
+    "matcher.add(\"ELECTRICAL_INSTALLATION\", None, electrical_installation_pattern_1, electrical_installation_pattern_2)\n",
+    "\n",
+    "# VOLTAGE_PREFIX\n",
+    "voltage_prefix_pattern_1 = [{\"LOWER\": {\"IN\": [\"mindre\"]}},{\"LOWER\": {\"IN\": [\"enn\"]}}]\n",
+    "voltage_prefix_pattern_2 = [{\"LOWER\": {\"IN\": [\"inntil\"]}}]\n",
+    "matcher.add(\"VOLTAGE_PREFIX\", None, voltage_prefix_pattern_1, voltage_prefix_pattern_2)\n",
+    "\n",
+    "# VOLTAGE\n",
+    "voltage_pattern = [\n",
+    "    {\"TEXT\": {\"REGEX\": \"[0-9]+[,]+[0-9]|[0-9]\"}},\n",
+    "    {\"LOWER\": {\"IN\": [\"v\"]}}]\n",
+    "matcher.add(\"VOLTAGE\", None, voltage_pattern)\n",
     "\n",
     "#\n",
     "# END - spaCy patterns\n",
@@ -231,16 +224,6 @@
     "    final_token_end = token_end\n",
     "\n",
     "    #\n",
-    "    # Expand result if extra length detected in the words before in the line\n",
-    "    #\n",
-    "    if match_id_as_string == \"LENGTH\" and token_start > 0:\n",
-    "        prev_token_1 = doc[token_start-1].text\n",
-    "        if prev_token_1 in (\"og\", \"til\"):\n",
-    "            prev_token_2 = doc[token_start-2].text\n",
-    "            if is_float(prev_token_2):\n",
-    "                final_token_start = token_start-2\n",
-    "\n",
-    "    #\n",
     "    # convert token_span to char_span.\n",
     "    # char_span is needed to display correctly withdisplacy.render().\n",
     "    #\n",
@@ -254,17 +237,65 @@
     "\n",
     "# display result with spacy styling\n",
     "display_this_result = {'text': text, 'ents': sorted(result, key=lambda x: x['start']), 'title': 0}\n",
-    "options = {\"colors\": {\"LENGTH\": \"yellow\", \"LENGTH_PREFIX\": \"orange\", \"WATER_VESSEL\": \"aquamarine\"}}\n",
+    "options = {\"colors\": {\"VOLTAGE\": \"yellow\", \"VOLTAGE_PREFIX\": \"orange\", \"WATER_VESSEL\": \"aquamarine\", \"ELECTRICAL_INSTALLATION\": \"darksalmon\"}}\n",
     "from spacy import displacy\n",
     "displacy.render(display_this_result, style='ent', manual=True, options=options)"
    ]
   },
   {
+   "source": [
+    "# Functions run from .py file"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[{'start': 4, 'end': 10, 'label': 'WATER_VESSEL'},\n",
+       " {'start': 77, 'end': 94, 'label': 'ELECTRICAL_INSTALLATION'},\n",
+       " {'start': 108, 'end': 114, 'label': 'VOLTAGE_PREFIX'},\n",
+       " {'start': 115, 'end': 121, 'label': 'VOLTAGE'},\n",
+       " {'start': 181, 'end': 198, 'label': 'ELECTRICAL_INSTALLATION'},\n",
+       " {'start': 204, 'end': 210, 'label': 'WATER_VESSEL'},\n",
+       " {'start': 275, 'end': 292, 'label': 'ELECTRICAL_INSTALLATION'},\n",
+       " {'start': 306, 'end': 312, 'label': 'VOLTAGE_PREFIX'},\n",
+       " {'start': 313, 'end': 317, 'label': 'VOLTAGE'}]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Something that must be done \n",
+    "# to make the notebook reload a function\n",
+    "# from a costum .py file.\n",
+    "#\n",
+    "\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import importlib\n",
+    "\n",
+    "import spacy_matching_rule_identify_electrical_installation_no\n",
+    "\n",
+    "from spacy_matching_rule_identify_electrical_installation_no import identify_electrical_installation_in_text\n",
+    "\n",
+    "importlib.reload(spacy_matching_rule_identify_electrical_installation_no)\n",
+    "\n",
+    "################\n",
+    "################\n",
+    "\n",
+    "identify_electrical_installation_in_text(\"(1) Fartøy med største lengde 6 til 15 meter bygget etter 1. januar 1992 med elektriske anlegg med spenning inntil 50,6 V skal oppfylle kravene i Nordisk Båt Standard (1990) Y11 om elektriske anlegg. (2) Fartøy med største lengde 6 til 15 meter bygget før 1. januar 1992 med elektriske anlegg med spenning inntil 50 V skal være i henhold til regelverket som gjaldt ved byggetidspunktet.\")"
+   ]
   }
  ]
 }
