--- a/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify electrical installation - NO/Identify electrical installation.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Spacy matching rule - Identify electrical installation - NO/Identify electrical installation.ipynb
@@ -28,57 +28,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Collecting spacy==2.3.5\n",
-      "  Using cached spacy-2.3.5-cp39-cp39-win_amd64.whl (9.4 MB)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\n",
-      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
-      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.7.4)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.19.3)\n",
-      "Requirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\n",
+      "Requirement already satisfied: spacy==2.3.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.3.5)\n",
       "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.0.5)\n",
-      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (4.54.1)\n",
-      "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.8.2)\n",
-      "ERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "en-core-web-md 3.0.0 requires spacy<3.1.0,>=3.0.0, but you have spacy 2.3.5 which is incompatible.\n",
+      "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.7.4)\n",
+      "Requirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\n",
+      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.0)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (3.0.5)\n",
       "WARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
       "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (3.0.5)\n",
-      "Collecting catalogue<1.1.0,>=0.0.7\n",
-      "  Using cached catalogue-1.0.0-py2.py3-none-any.whl (7.7 kB)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2.10)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\n",
+      "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (4.54.1)\n",
+      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.8.2)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.19.3)\n",
+      "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
+      "Requirement already satisfied: thinc<7.5.0,>=7.4.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (7.4.5)\n",
       "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (4.0.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2020.12.5)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2.10)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (1.26.2)\n",
-      "Collecting srsly<1.1.0,>=1.0.2\n",
-      "  Using cached srsly-1.0.5-cp39-cp39-win_amd64.whl (177 kB)\n",
-      "Collecting thinc<7.5.0,>=7.4.1\n",
-      "  Using cached thinc-7.4.5-cp39-cp39-win_amd64.whl (904 kB)\n",
-      "Installing collected packages: srsly, catalogue, thinc, spacy\n",
-      "  Attempting uninstall: srsly\n",
-      "    Found existing installation: srsly 2.4.0\n",
-      "    Uninstalling srsly-2.4.0:\n",
-      "      Successfully uninstalled srsly-2.4.0\n",
-      "  Attempting uninstall: catalogue\n",
-      "    Found existing installation: catalogue 2.0.1\n",
-      "    Uninstalling catalogue-2.0.1:\n",
-      "      Successfully uninstalled catalogue-2.0.1\n",
-      "  Attempting uninstall: thinc\n",
-      "    Found existing installation: thinc 8.0.1\n",
-      "    Uninstalling thinc-8.0.1:\n",
-      "      Successfully uninstalled thinc-8.0.1\n",
-      "  Attempting uninstall: spacy\n",
-      "    Found existing installation: spacy 3.0.1\n",
-      "    Uninstalling spacy-3.0.1:\n",
-      "      Successfully uninstalled spacy-3.0.1\n",
-      "Successfully installed catalogue-1.0.0 spacy-2.3.5 srsly-1.0.5 thinc-7.4.5\n"
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2020.12.5)\n"
      ]
     }
    ],
@@ -88,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -199,10 +175,13 @@
     "electrical_installation_pattern_2 = [{\"LOWER\": {\"IN\": [\"elektriske\"]}},{\"LOWER\": {\"IN\": [\"anlegg\"]}}]\n",
     "matcher.add(\"ELECTRICAL_INSTALLATION\", None, electrical_installation_pattern_1, electrical_installation_pattern_2)\n",
     "\n",
-    "# VOLTAGE_PREFIX\n",
-    "voltage_prefix_pattern_1 = [{\"LOWER\": {\"IN\": [\"mindre\"]}},{\"LOWER\": {\"IN\": [\"enn\"]}}]\n",
-    "voltage_prefix_pattern_2 = [{\"LOWER\": {\"IN\": [\"inntil\"]}}]\n",
-    "matcher.add(\"VOLTAGE_PREFIX\", None, voltage_prefix_pattern_1, voltage_prefix_pattern_2)\n",
+    "# VOLTAGE_PREFIX \n",
+    "matcher.add(\n",
+    "    \"VOLTAGE_PREFIX\",\n",
+    "    None,\n",
+    "    [{\"LOWER\": {\"IN\": [\"mindre\"]}},{\"LOWER\": {\"IN\": [\"enn\"]}}],\n",
+    "    [{\"LOWER\": {\"IN\": [\"inntil\"]}}],\n",
+    "    [{\"LOWER\": {\"IN\": [\"over\"]}}])\n",
     "\n",
     "# VOLTAGE\n",
     "voltage_pattern = [\n",
@@ -251,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +249,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 24
     }
    ],
    "source": [
