Fix for misspelling "regularion" to "regulation". #30

--- a/NLP Python Jupyter Notebooks/Script - Api - identify-electrical-installation-in-text-service-norwegian-chapter-input/Api - identify-electrical-installation-in-text-service-norwegian-chapter-input.ipynb
+++ b/NLP Python Jupyter Notebooks/Script - Api - identify-electrical-installation-in-text-service-norwegian-chapter-input/Api - identify-electrical-installation-in-text-service-norwegian-chapter-input.ipynb
@@ -43,25 +43,25 @@
      "name": "stdout",
      "text": [
       "Requirement already satisfied: spacy==2.3.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (2.3.5)\n",
-      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (3.0.5)WARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
+      "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.8.2)\n",
+      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
+      "Requirement already satisfied: preshed<3.1.0,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (3.0.5)\n",
+      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.0)WARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
       "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
       "\n",
-      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.0.5)\n",
-      "Requirement already satisfied: wasabi<1.1.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.8.2)\n",
-      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\n",
-      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.19.3)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\n",
       "Requirement already satisfied: murmurhash<1.1.0,>=0.28.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
-      "Requirement already satisfied: catalogue<1.1.0,>=0.0.7 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.0)\n",
       "Requirement already satisfied: blis<0.8.0,>=0.4.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (0.7.4)\n",
-      "Requirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\n",
-      "Requirement already satisfied: srsly<1.1.0,>=1.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.0.5)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (49.2.1)\n",
       "Requirement already satisfied: tqdm<5.0.0,>=4.38.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (4.54.1)\n",
       "Requirement already satisfied: thinc<7.5.0,>=7.4.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (7.4.5)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2.10)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (1.26.2)\n",
+      "Requirement already satisfied: numpy>=1.15.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.19.3)\n",
+      "Requirement already satisfied: cymem<2.1.0,>=2.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.0.5)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.13.0 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (2.25.1)\n",
+      "Requirement already satisfied: plac<1.2.0,>=0.9.6 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from spacy==2.3.5) (1.1.3)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2020.12.5)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (4.0.0)\n"
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (2.10)\n",
+      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (4.0.0)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from requests<3.0.0,>=2.13.0->spacy==2.3.5) (1.26.2)\n"
      ]
     }
    ],
@@ -1135,40 +1135,40 @@
        "[{'voltage_prefix': 'inntil',\n",
        "  'voltage_value': '50',\n",
        "  'measurement_text': 'V',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '1'},\n",
        " {'voltage_prefix': 'inntil',\n",
        "  'voltage_value': '50',\n",
        "  'measurement_text': 'V',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '2'},\n",
        " {'voltage_prefix': 'over',\n",
        "  'voltage_value': '50',\n",
        "  'measurement_text': 'V',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '3'},\n",
        " {'voltage_prefix': 'over',\n",
        "  'voltage_value': '50',\n",
        "  'measurement_text': 'V',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '4'}]"
@@ -1221,14 +1221,14 @@
     "    # Metadata from URL\n",
     "    metadata_from_url = {}\n",
     "    result_text_service_url = get_data_from_text_service_item_url(text_service_url)\n",
-    "    if \"regularion_year\" in result_text_service_url:\n",
-    "        metadata_from_url['regularion_year'] = result_text_service_url['regularion_year']\n",
-    "    if \"regularion_month\" in result_text_service_url:\n",
-    "        metadata_from_url['regularion_month'] = result_text_service_url['regularion_month']\n",
-    "    if \"regularion_day\" in result_text_service_url:\n",
-    "        metadata_from_url['regularion_day'] = result_text_service_url['regularion_day']\n",
-    "    if \"regularion_id\" in result_text_service_url:\n",
-    "        metadata_from_url['regularion_id'] = result_text_service_url['regularion_id']\n",
+    "    if \"regulation_year\" in result_text_service_url:\n",
+    "        metadata_from_url['regulation_year'] = result_text_service_url['regulation_year']\n",
+    "    if \"regulation_month\" in result_text_service_url:\n",
+    "        metadata_from_url['regulation_month'] = result_text_service_url['regulation_month']\n",
+    "    if \"regulation_day\" in result_text_service_url:\n",
+    "        metadata_from_url['regulation_day'] = result_text_service_url['regulation_day']\n",
+    "    if \"regulation_id\" in result_text_service_url:\n",
+    "        metadata_from_url['regulation_id'] = result_text_service_url['regulation_id']\n",
     "    if \"chapter_number\" in result_text_service_url:\n",
     "        metadata_from_url['chapter_number'] = result_text_service_url['chapter_number']\n",
     "    if \"section_number\" in result_text_service_url:\n",
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1304,47 +1304,47 @@
        "[{'voltage_prefix': 'inntil',\n",
        "  'voltage_value': '50',\n",
        "  'measurement_text': 'V',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '1'},\n",
        " {'voltage_prefix': 'inntil',\n",
        "  'voltage_value': '50',\n",
        "  'measurement_text': 'V',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '2'},\n",
        " {'voltage_prefix': 'over',\n",
        "  'voltage_value': '50',\n",
        "  'measurement_text': 'V',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '3'},\n",
        " {'voltage_prefix': 'over',\n",
        "  'voltage_value': '50',\n",
        "  'measurement_text': 'V',\n",
-       "  'regularion_year': '2013',\n",
-       "  'regularion_month': '11',\n",
-       "  'regularion_day': '22',\n",
-       "  'regularion_id': '1404',\n",
+       "  'regulation_year': '2013',\n",
+       "  'regulation_month': '11',\n",
+       "  'regulation_day': '22',\n",
+       "  'regulation_id': '1404',\n",
        "  'chapter_number': '3',\n",
        "  'section_number': '23',\n",
        "  'part_number': '4'}]"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 10
     }
    ],
    "source": [
